Remove array dereference JS in HTML for linux calc

--- a/public/linux-calc.html
+++ b/public/linux-calc.html
@@ -11,7 +11,7 @@
                     method: 'GET'
                 })
                 .done(function(result) {
-                    $('#linuxservers').val(result[0].LINUXSERVERS);
+                    $('#linuxservers').val(result.LINUXSERVERS);
                 });
             });
         });
